# serializer version: 1
# name: TestFind.test_basic
  dict({
    'counts': dict({
      'cancelled': dict({
        'aodp': 0,
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 0,
        'iimi': 0,
        'nuvs': 0,
        'pathoscope': 0,
      }),
      'failed': dict({
        'aodp': 2,
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 0,
        'iimi': 0,
        'nuvs': 0,
        'pathoscope': 0,
      }),
      'pending': dict({
        'aodp': 0,
        'build_index': 0,
        'create_sample': 1,
        'create_subtraction': 0,
        'iimi': 0,
        'nuvs': 1,
        'pathoscope': 0,
      }),
      'running': dict({
        'aodp': 1,
        'build_index': 0,
        'create_sample': 0,
        'create_subtraction': 1,
        'iimi': 0,
        'nuvs': 1,
        'pathoscope': 0,
      }),
      'succeeded': dict({
        'aodp': 0,
        'build_index': 0,
        'create_sample': 1,
        'create_subtraction': 1,
        'iimi': 0,
        'nuvs': 0,
        'pathoscope': 0,
      }),
    }),
    'found_count': 11,
    'items': list([
      dict({
        'created_at': str,
        'id': 11,
        'progress': 0,
        'state': 'running',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'create_subtraction',
      }),
      dict({
        'created_at': str,
        'id': 10,
        'progress': 0,
        'state': 'running',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'nuvs',
      }),
      dict({
        'created_at': str,
        'id': 9,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'aodp',
      }),
      dict({
        'created_at': str,
        'id': 8,
        'progress': 100,
        'state': 'failed',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'aodp',
      }),
      dict({
        'created_at': str,
        'id': 7,
        'progress': 100,
        'state': 'succeeded',
        'user': dict({
          'handle': 'modonnell',
          'id': 3,
        }),
        'workflow': 'create_subtraction',
      }),
    ]),
    'page': 1,
    'page_count': 3,
    'per_page': 5,
    'total_count': 11,
  })
# ---
# name: TestFind.test_state_invalid
  list([
    dict({
      'in': 'query string',
      'loc': list([
        'state',
        0,
      ]),
      'msg': "value is not a valid enumeration member; permitted: 'cancelled', 'failed', 'pending', 'running', 'succeeded'",
      'type': 'type_error.enum',
    }),
  ])
# ---
# name: TestPushStatus.test[None]
  dict({
    'args': dict({
    }),
    'claim': None,
    'claimed_at': NoneType,
    'created_at': str,
    'id': 'BgVIaJUT',
    'pinged_at': str,
    'progress': 0,
    'state': 'running',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'create_subtraction',
  })
# ---
# name: TestPushStatus.test_bad_state
  dict({
    'errors': dict({
      'state': list([
        'unallowed value bad',
      ]),
    }),
    'id': 'invalid_input',
    'message': 'Invalid input',
  })
# ---
# name: TestPushStatus.test_error[invalid-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-invalid-valid]
  tuple(
    201,
    dict({
      'args': dict({
      }),
      'claim': None,
      'claimed_at': NoneType,
      'created_at': str,
      'id': 'BgVIaJUT',
      'pinged_at': str,
      'progress': 100,
      'state': 'failed',
      'steps': None,
      'user': dict({
        'handle': 'myersmitchell',
        'id': 2,
      }),
      'workflow': 'create_subtraction',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[invalid-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-invalid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[missing-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'required field',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-invalid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-missing-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-invalid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'must be of string type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-missing]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
            'type': list([
              'required field',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_error[valid-valid-valid]
  tuple(
    422,
    dict({
      'errors': dict({
        'error': list([
          dict({
            'details': list([
              'must be of list type',
            ]),
            'traceback': list([
              'must be of list type',
            ]),
          }),
        ]),
      }),
      'id': 'invalid_input',
      'message': 'Invalid input',
    }),
  )
# ---
# name: TestPushStatus.test_missing_error
  tuple(
    400,
    dict({
      'id': 'bad_request',
      'message': 'Missing error information',
    }),
  )
# ---
# name: TestPushStatus.test_name_and_description
  dict({
    'args': dict({
    }),
    'claim': None,
    'claimed_at': NoneType,
    'created_at': str,
    'id': 'BgVIaJUT',
    'pinged_at': str,
    'progress': 0,
    'state': 'running',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'create_subtraction',
  })
# ---
# name: test_cancel[None]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': str,
    'created_at': str,
    'id': 1,
    'pinged_at': str,
    'progress': 100,
    'state': 'cancelled',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_get[None]
  dict({
    'args': dict({
    }),
    'claim': dict({
      'cpu': 1.0,
      'image': 'virtool/fake:latest',
      'mem': 1.0,
      'runner_id': 'fake-runner',
      'runtime_version': '0.0.0',
      'workflow_version': '0.0.0',
    }),
    'claimed_at': str,
    'created_at': str,
    'id': 1,
    'pinged_at': str,
    'progress': 100,
    'state': 'failed',
    'steps': None,
    'user': dict({
      'handle': 'myersmitchell',
      'id': 2,
    }),
    'workflow': 'nuvs',
  })
# ---
